speaking content and styles

--- a/src/patterns/01-molecules/00-text/04-intro-text.mustache
+++ b/src/patterns/01-molecules/00-text/04-intro-text.mustache
@@ -1,3 +1,8 @@
 <div class="intro--text">
-  {{{intro-graphs}}}
+  <div class="intro-graphs">
+    {{{intro-graphs}}}
+  </div>
+  <div class="intro-graphs-caption">
+    {{{intro-graphs-caption}}}
+  </div>
 </div>
