--- a/src/patterns/03-pages/02-speaking.mustache
+++ b/src/patterns/03-pages/02-speaking.mustache
@@ -4,7 +4,7 @@
 <div class="page--speaking page-content">
   <h1>Speaking</h1>
   {{# intro}}
-    {{>// organisms-intro}}
+    {{> organisms-intro}}
   {{/intro}}
 
   {{#talks}}
