upgrade pl starter

--- a/src/scss/99-styleguide-specific/_sg-colors.scss
+++ b/src/scss/99-styleguide-specific/_sg-colors.scss
@@ -8,6 +8,8 @@
   flex-wrap: wrap;
   > li {
     display: block;
+    width: auto;
+    padding: 0;
     .sg-swatch {
       display: block;
       min-height: 15em;
