--- a/src/patternlab-files/styleguide.mustache
+++ b/src/patternlab-files/styleguide.mustache
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width" />
 		<link rel="stylesheet" href="../../styleguide/css/styleguide.css" media="all" />
 		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css" media="all" />
+		<link rel="stylesheet" href="../../dest/style.css">
     <!-- inject:css -->
     <link rel="stylesheet" href="../../../../bower_components/highlightjs/styles/default.css">
     <link rel="stylesheet" href="../../../../dest/style.css">
@@ -69,9 +70,9 @@
 		<script src="../../styleguide/js/code-pattern.js"></script>
     <!-- inject:js -->
     <script src="../../../../bower_components/jquery/jquery.js"></script>
+    <script src="../../../../bower_components/lodash/lodash.js"></script>
     <script src="../../../../bower_components/eq.js/dist/eq.min.js"></script>
     <script src="../../../../bower_components/highlightjs/highlight.pack.js"></script>
-    <script src="../../../../bower_components/lodash/lodash.js"></script>
     <script src="../../../../bower_components/drupal/index.js"></script>
     <script src="../../../../bower_components/letteringjs/jquery.lettering.js"></script>
     <script src="../../../../bower_components/modernizr/modernizr.js"></script>
