--- a/src/scss/00-config/02-variables/_typography.scss
+++ b/src/scss/00-config/02-variables/_typography.scss
@@ -6,7 +6,7 @@
 // @todo refactor font names
 $font-map: (
   surveyor: #{'Surveyor SSm A', 'Surveyor SSm B', Georgia, serif},
-  surveyor-fine: #{'"Surveyor Fine A", "Surveyor Fine B"', Georgia, serif},
+  surveyor-fine: #{'Surveyor Fine A', 'Surveyor Fine B', Georgia, serif},
   //whitney: #{'Whitney SSm A', 'Whitney SSm B', sans-serif},
   archer: #{'Archer SSm A', 'Archer SSm B', sans-serif},
   adobe-blank: #{'AdobeBlank', sans-serif}
