refactor speaking scss

--- a/src/patterns/01-molecules/02-blocks/00-portfolio-item.mustache
+++ b/src/patterns/01-molecules/02-blocks/00-portfolio-item.mustache
@@ -1,5 +1,5 @@
-<div class="portfolio-item_pi">
-  <h2 class="pi--project-name">Score.org</h2>
+<div class="portfolio-item_pi page-content">
+  <h1 class="pi--project-name page-title">Score.org</h1>
   <div class="pi--overview">
     <div class="pi--overview--text">Engage and create <em>relationships</em> with <em>entrpreneurs</em>.</div>
   </div>
