--- a/src/patterns/03-pages/02-speaking.mustache
+++ b/src/patterns/03-pages/02-speaking.mustache
@@ -2,7 +2,7 @@
 
 <!--SPEAKING PAGE CONTENT-->
 <div class="page--speaking page-content">
-  <h1>Speaking</h1>
+  <h1 class="page-title">Speaking</h1>
   {{# intro}}
     {{> organisms-intro}}
   {{/intro}}
