--- a/src/scss/00-config/03-mixins/_layout.scss
+++ b/src/scss/00-config/03-mixins/_layout.scss
@@ -2,6 +2,16 @@
 // Layout - Mixins
 // ========================================================================== */
 
+/// Calculate widths for flex-layout columns
+/// @param {integer} $column [1] - what column
+@mixin flex-layout--2($column: 1) {
+  @if ($column == 1) {
+    flex-basis: calc(#{phi-a(100%)} - 1.5em);
+  }
+  @if ($column == 2) {
+    flex-basis: calc(#{phi-b(100%)} - 1.5em);
+  }
+}
 
 // Mixin - Full Container
 // ========================================================================== */
