--- a/src/scss/00-config/03-mixins/_buttons-cta.scss
+++ b/src/scss/00-config/03-mixins/_buttons-cta.scss
@@ -1,26 +1,26 @@
 @mixin btn(
   $theme: null,
-  $bg-color: color(blue),
+  $bg-color: color(black),
   $text-color: color(white),
   $text-color-hover: color(gray, light),
   $font-size: ms(1),
   $font-weight: 600,
   $right-arrow: false) {
-  @if $theme == cta-standard {
-    $font-size: ms(2);
-    $right-arrow: true;
-  }
-  @if $theme == cta-primary {
-    $bg-color: color(yellow);
-    $text-color: color(blue, light);
-    $text-color-hover: color(blue);
-    $font-size: ms(4);
-    $font-weight: 800;
-    $right-arrow: true;
-  }
+  //@if $theme == cta-standard {
+  //  $font-size: ms(2);
+  //  $right-arrow: true;
+  //}
+  //@if $theme == cta-primary {
+  //  $bg-color: color(yellow);
+  //  $text-color: color(blue, light);
+  //  $text-color-hover: color(blue);
+  //  $font-size: ms(4);
+  //  $font-weight: 800;
+  //  $right-arrow: true;
+  //}
   @include unset-background-links();
   @include set-link-colors($link-normal: $text-color, $link-hover: $text-color-hover, $link-active: $text-color-hover, $link-visited: $text-color, $link-focus: $text-color-hover);
-  @include background-gradient($bg-color);
+  //@include background-gradient($bg-color);
   font-size: fontsize-rem($font-size);
   display: inline-block;
   padding: 0.5em;
