--- a/src/scss/40-components/_button-logo.scss
+++ b/src/scss/40-components/_button-logo.scss
@@ -5,16 +5,16 @@ $button-logo-foreground-color: color(white);
   @include button-logo--base();
   //@include button-logo-image('https://unsplash.it/400/400?random');
   //@include button-logo-image('https://unsplash.it/400/400?image=961');
-  //@include button-logo-image('../../src/images/headers/aligator-skull.jpg');
-  //@include button-logo-image('../../src/images/headers/antler-skull.jpg');
-  //@include button-logo-image('../../src/images/headers/moon-landing.jpg', $background-color: #EFE07A);
-  //@include button-logo-image('../../src/images/headers/rockies-1.jpg');
-  //@include button-logo-image('../../src/images/headers/rockies-2.jpg');
-  //@include button-logo-image('../../src/images/headers/roofs.jpg');
-  //@include button-logo-image('../../src/images/headers/sc-sky.jpg');
-  //@include button-logo-image('../../src/images/headers/snake-skeleton.jpg');
-  //@include button-logo-image('../../src/images/headers/train-kiss.jpg');
-  @include button-logo-image('../../src/images/headers/space-helmet.jpg');
+  //@include button-logo-image('../src/images/headers/aligator-skull.jpg');
+  //@include button-logo-image('../src/images/headers/antler-skull.jpg');
+  //@include button-logo-image('../src/images/headers/moon-landing.jpg', $background-color: #EFE07A);
+  //@include button-logo-image('../src/images/headers/rockies-1.jpg');
+  //@include button-logo-image('../src/images/headers/rockies-2.jpg');
+  //@include button-logo-image('../src/images/headers/roofs.jpg');
+  //@include button-logo-image('../src/images/headers/sc-sky.jpg');
+  //@include button-logo-image('../src/images/headers/snake-skeleton.jpg');
+  //@include button-logo-image('../src/images/headers/train-kiss.jpg');
+  @include button-logo-image('../src/images/headers/space-helmet.jpg');
 }
 
 .button-logo--words-wrapper {
