fix image paths

--- a/src/scss/40-components/_intro.scss
+++ b/src/scss/40-components/_intro.scss
@@ -12,7 +12,7 @@
     flex-basis: calc(#{phi-a(100%)} - 1.5em);
   }
   .page--speaking & {
-    background-image: url('../../src/images/speaking/sass-conf--speaker-panel.jpg');
+    background-image: url('../src/images/speaking/sass-conf--speaker-panel.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 50% 100%;
