--- a/src/scss/00-config/02-variables/_colors.scss
+++ b/src/scss/00-config/02-variables/_colors.scss
@@ -59,7 +59,7 @@ $color-warning: color(orange);
 
 // Links
 $cs--link-a: color(black);
-$cs--link-b: color(red);
+$cs--link-b: color(gray);
 $cs-link-normal: $cs--link-a;
 $cs-link-hover: $cs--link-b;
 $cs-link-active: $cs--link-a;
