--- a/src/scss/00-config/02-variables/_settings.scss
+++ b/src/scss/00-config/02-variables/_settings.scss
@@ -11,4 +11,6 @@ $border-radius: 0.25em;
 ///
 $image-path: '../../../../images/';
 ///
-$page-max-width: 1640px;
+$side-margin: 0.5rem;
+///
+$side-margin--wide: 2rem;
