--- a/src/scss/10-base/_00-base.scss
+++ b/src/scss/10-base/_00-base.scss
@@ -23,8 +23,11 @@ body {
   height: 100%;
   margin: 0 auto;
   position: relative;
-  padding: 0 0.5em;
+  padding: 0 $side-margin;
   //overflow-x: hidden;
+  @include breakpoint($bp-typography-narrow) {
+    padding: 0 $side-margin--wide;
+  }
 }
 
 button,
