--- a/src/patterns/03-pages/00-home.mustache
+++ b/src/patterns/03-pages/00-home.mustache
@@ -1,6 +1,6 @@
 {{> organisms-header }}
 
-<!--SPEAKING PAGE CONTENT-->
+<!--HOME PAGE CONTENT-->
 <div class="page--home page-content">
   <h1 class="page-title">Hi. <span class="my-name">I’m <span class="no-break">Mason Wendell.</span></span></h1>
   {{# intro}}
