--- a/src/patterns/03-pages/00-home.mustache
+++ b/src/patterns/03-pages/00-home.mustache
@@ -6,17 +6,7 @@
   {{# intro}}
     {{> organisms-intro}}
   {{/intro}}
-  <div class="portfolio-overview">
-    <h2 class="section-title"><a href="">Portfolio</a></h2>
-    <div class="portfolio-overview--item">
-      <a href="" class="po-item--link reliefweb">
-        <h3 class="po-item--name">UN OCHA Relief Web</h3>
-      </a>
-    </div>
-    <div class="portfolio-overview--item">
-      <a href="" class="po-item--link score">
-        <h3 class="po-item--name">SCORE</h3>
-      </a>
-    </div>
-  </div>
+  {{>organisms-portfolio-overview}}
 </div>
+
+{{> organisms-footer }}
