--- a/src/patterns/02-organisms/00-global/01-footer.mustache
+++ b/src/patterns/02-organisms/00-global/01-footer.mustache
@@ -1,7 +1,7 @@
 <!-- Begin Footer -->
 <footer class="footer" role="contentinfo">
 	<div class="lc">
-		<p class="copyright">&copy; 2013 Company Name. All rights reserved.</p>
+		<p class="copyright">&copy; 2016 Mason Wendell. All rights reserved.</p>
 	</div>
 </footer>
 <!-- End Footer -->
