fix portfolio overview fixed scroll

--- a/src/patterns/01-molecules/02-blocks/12-portfolio-overview-item.mustache
+++ b/src/patterns/01-molecules/02-blocks/12-portfolio-overview-item.mustache
@@ -1,7 +1,4 @@
-{{#portfolio-overview--item}}
-  <div class="portfolio-overview--item">
-    <a href="" class="po-item--link {{class}}">
-      <h3 class="po-item--name">{{item-name}}</h3>
-    </a>
-  </div>
-{{/portfolio-overview--item}}
+<div class="portfolio-overview--item">
+  <h3 class="po-item--name"><a href="">{{item-name}}</a></h3>
+  <a href="" class="po-item--link {{class}}"></a>
+</div>
