--- a/src/patterns/02-organisms/03-sections/07-portfolio-overview.mustache
+++ b/src/patterns/02-organisms/03-sections/07-portfolio-overview.mustache
@@ -1,10 +1,6 @@
 <div class="portfolio-overview">
   <h2 class="section-title"><a href="">Portfolio</a></h2>
   {{#portfolio-overview--items}}
-    <div class="portfolio-overview--item">
-      <a href="" class="po-item--link {{class}}">
-        <h3 class="po-item--name">{{item-name}}</h3>
-      </a>
-    </div>
+    {{>molecules-portfolio-overview-item}}
   {{/portfolio-overview--items}}
 </div>
