--- a/src/patterns/02-organisms/00-global/01-footer.mustache
+++ b/src/patterns/02-organisms/00-global/01-footer.mustache
@@ -1,7 +1,24 @@
 <!-- Begin Footer -->
-<footer class="footer" role="contentinfo">
-	<div class="lc">
-		<p class="copyright">&copy; 2016 Mason Wendell. All rights reserved.</p>
+<footer class="page-footer" role="contentinfo">
+  <div class="footer-content">
+  <div class="monogram-wrapper">{{>molecules-monogram}}</div>
+  <div class="contact">
+    <div class="contact-item email">
+      <a href="mailto:mason@thecodingdesigner.com" class="icon-link">{{>atoms-icon-mail}}</a>
+      <a href="mailto:mason@thecodingdesigner.com"><span class="text">mason@thecodingdesigner.com</span></a></div>
+    <div class="contact-item twitter">
+      <a href="https://twitter.com/codingdesigner" class="icon-link">{{>atoms-icon-twitter}}</a>
+      <a href="https://twitter.com/codingdesigner"><span class="text">@codingdesigner</span></a></div>
+    <div class="contact-item instagram">
+      <a href="https://www.instagram.com/codingdesigner/" class="icon-link">{{>atoms-icon-instagram}}</a>
+      <a href="https://www.instagram.com/codingdesigner/"><span class="text">@codingdesigner</span></a></div>
+    <div class="contact-item LinkedIn">
+      <a href="http://www.linkedin.com/in/masonwendell" class="icon-link">{{>atoms-icon-linkedin}}</a>
+      <a href="http://www.linkedin.com/in/masonwendell"><span class="text">Mason Wendell</span></a></div>
+  </div>
+	<div class="copyright">
+		<p>&copy; 2016 Mason Wendell. All rights reserved.</p>
 	</div>
+  </div>
 </footer>
 <!-- End Footer -->
