--- a/src/scss/00-config/02-variables/_breakpoints.scss
+++ b/src/scss/00-config/02-variables/_breakpoints.scss
@@ -69,3 +69,5 @@ $bp--portfolio-overview--med: 768px 1023px;
 $bp--portfolio-overview--wide: 1024px;
 ///
 $bp--page-over-wide: $page-max-width;
+///
+$bp--footer-small-text: max-width 400px;
