--- a/src/scss/00-config/03-mixins/_layout.scss
+++ b/src/scss/00-config/03-mixins/_layout.scss
@@ -13,6 +13,12 @@
   }
 }
 
+/// Limit content dimensions
+@mixin content-limiter() {
+  max-width: $page-max-width;
+  margin: 0 auto;
+}
+
 // Mixin - Full Container
 // ========================================================================== */
 
