--- a/src/scss/10-base/_page.scss
+++ b/src/scss/10-base/_page.scss
@@ -1,4 +1,7 @@
 .page-content {
-  max-width: $page-max-width;
-  margin: 0 auto;
+  @include content-limiter();
+}
+
+.footer-content {
+  @include content-limiter();
 }
