re-enable auto menu click

--- a/src/scss/40-components/_navigation-main.scss
+++ b/src/scss/40-components/_navigation-main.scss
@@ -22,8 +22,8 @@ $navigation-count: 7;
   z-index: 2;
   position: relative;
   @include breakpoint($bp--navigation--wide) {
-    position: relative;
     top: -1em;
+    z-index: 3;
   }
   .nav-item {}
   .site-header & {}
