dashed line below header

--- a/src/scss/40-components/_navigation-main.scss
+++ b/src/scss/40-components/_navigation-main.scss
@@ -51,7 +51,7 @@ $navigation-count: 7;
     margin-top: 1.5em;
     margin-bottom: 5em;
     min-width: 40em;
-    border-bottom: 0.25em double currentColor;
+    border-bottom: 0.25em dashed currentColor;
     padding-bottom: 5em;
     padding-left: $side-margin--wide;
   }
