refine portfolio item nav

--- a/src/patterns/03-pages/01-portfolio-item.mustache
+++ b/src/patterns/03-pages/01-portfolio-item.mustache
@@ -1,43 +1,6 @@
 {{> organisms-header }}
 <div class="page--portfolio page-content">
-  <!--<h1 class="page-title">Portfolio</h1>-->
-  <!-- portfolio navigation -->
-  <nav class="portfolio-navigation">
-    <h2 class="section-title">Portfolio</h2>
-    <ul class="pn--nav-list">
-      <li class="pn--nav-list-item">
-        <a href="" class="pn--nav-list-item--link">
-          <div class="pn--nav-list-item--image"><img src="../../../../src/images/portfolio/originals/score-home-thumb.png" alt="SCORE"></div>
-          <div class="pn--nav-list-item--name">SCORE</div>
-        </a>
-      </li>
-      <li class="pn--nav-list-item">
-        <a href="" class="pn--nav-list-item--link">
-          <div class="pn--nav-list-item--image"><img src="../../../../src/images/portfolio/originals/reliefweb-crisis-thumb.png" alt="UN OCHA ReliefWeb"></div>
-          <div class="pn--nav-list-item--name">UN OCHA ReliefWeb</div>
-        </a>
-      </li>
-      <li class="pn--nav-list-item">
-        <a href="" class="pn--nav-list-item--link">
-          <div class="pn--nav-list-item--image">{{>atoms-square}}</div>
-          <div class="pn--nav-list-item--name">UN OCHA</div>
-        </a>
-      </li>
-      <li class="pn--nav-list-item">
-        <a href="" class="pn--nav-list-item--link">
-          <div class="pn--nav-list-item--image">{{>atoms-square}}</div>
-          <div class="pn--nav-list-item--name">Phase2</div>
-        </a>
-      </li>
-      <li class="pn--nav-list-item">
-        <a href="" class="pn--nav-list-item--link">
-          <div class="pn--nav-list-item--image">{{>atoms-square}}</div>
-          <div class="pn--nav-list-item--name">SCORE</div>
-        </a>
-      </li>
-    </ul>
-  </nav>
-  <!-- // portfolio navigation -->
+  {{> organisms-portfolio-navigation }}
   {{> molecules-portfolio-item }}
 </div>
 {{> organisms-footer }}
