--- a/src/scss/40-components/_portfolio-nav.scss
+++ b/src/scss/40-components/_portfolio-nav.scss
@@ -14,18 +14,16 @@
 }
 
 .pn--nav-list {
-  list-style-type: none;
   display: flex;
-  //flex-wrap: wrap;
   padding: 0;
   margin: 0;
   overflow-x: auto;
 }
 
 .pn--nav-list-item {
-  //float: left;
+  list-style-type: none;
   min-width: 4em;
-  //flex-basis: 4em;
+  max-width: 6em;
   margin-right: 1em;
   margin-bottom: 1em;
   @include breakpoint($bp--navigation--wide) {
@@ -37,16 +35,12 @@
 }
 
 .pn--nav-list-item--link {
-  //display: flex;
-  //flex-direction: column;
   @include unset-background-links();
 }
 
 .pn--nav-list-item--image {
   width: 4em;
   margin-bottom: 0.25em;
-  //border-radius: 50%;
-  //overflow: hidden;
   @include breakpoint($bp--navigation--wide) {
     width: 6em;
   }
@@ -58,4 +52,3 @@
     font-size: fontsize-rem(ms(-1));
   }
 }
-
